space removed in code

--- a/Focus.html
+++ b/Focus.html
@@ -15,7 +15,6 @@
         <p id="focus" class="label">Focus:</p>
         <p id="break" class="label">Break</p>
         <p id="cycles" class="label">Cycles</p>
-
         <!--focus-->
         <div id="focus-timer" class="timer">
             <p id="f_min">30</p>
@@ -26,7 +25,6 @@
         <p id="counter" class="timer">0</p>
 
         <!--break-->
-
         <div id="break-timer" class="timer">
             <p id="b_min">05</p>
             <p class="semicolon">:</p>
@@ -42,9 +40,7 @@
         </p>
     </footer>
     <!-- js file -->
-    <script type="text/javascript" src="external.js">
-
-    </script>
+    <script type="text/javascript" src="external.js"></script>
 </body>
 
 </html>
