--- a/Focus.html
+++ b/Focus.html
@@ -9,10 +9,18 @@
 </head>
 
 <body>
+    <div class="nav">
+        <ul>
+            <li><a class="hover-menu" href="clock.html">Home</a></li>
+            <li><a class="hover-menu" href="focus.html">Focus</a></li>
+        </ul>
+    </div>
     <div id="container">
-        <p id="focus" class="label">Focus:</p>
+        
+        <p id="focus" class="label">Focus</p>
         <p id="break" class="label">Break</p>
         <p id="cycles" class="label">Cycles</p>
+        
         <!--focus-->
         <div id="focus-timer" class="timer">
             <p id="f_min">30</p>
@@ -29,16 +37,16 @@
             <p id="b_sec">00</p>
         </div>
         <!--button-->
-        <button id="start" class="btn">Start</button>
-        <button id="stop" class="btn">Pause</button>
-        <button id="reset" class="btn">Reset</button>
+        <button id="start" class="btn">focus</button>
+        <button id="stop" class="btn">reset</button>
+        <button id="reset" class="btn">pause</button>
     </div>
     <footer style="text-align: center; font-weight: bold;color: rgb(63, 49, 49); margin: 0px auto;">
         <p class="copyright">© 2022 | Created and Designed By |<a href="https://github.com/iamisha"> Isha Hitang</a> |
         </p>
     </footer>
     <!-- js file -->
-    <script type="text/javascript" src="external.js"></script>
+    <script type="text/javascript" src="focus.js"></script>
 </body>
 
 </html>
