--- a/clock.html
+++ b/clock.html
@@ -25,7 +25,7 @@
         </p>
     </footer>
     <!-- js file -->
-    <script type="text/javascript" src="external.js"></script>
+    <script type="text/javascript" src="clock.js"></script>
 </body>
 
 </html>
