--- a/Focus.html
+++ b/Focus.html
@@ -11,7 +11,7 @@
 <body>
     <div class="nav">
         <ul>
-            <li><a class="hover-menu" href="clock.html">Home</a></li>
+            <li><a class="hover-menu" href="index.html">Home</a></li>
             <li><a class="hover-menu" href="focus.html">Focus</a></li>
         </ul>
     </div>
@@ -38,11 +38,11 @@
         </div>
         <!--button-->
         <button id="start" class="btn">focus</button>
-        <button id="stop" class="btn">reset</button>
-        <button id="reset" class="btn">pause</button>
+        <button id="stop" class="btn">pause</button>
+        <button id="reset" class="btn">reset</button>
     </div>
     <footer style="text-align: center; font-weight: bold;color: rgb(63, 49, 49); margin: 0px auto;">
-        <p class="copyright">© 2022 | Created and Designed By |<a href="https://github.com/iamisha"> Isha Hitang</a> |
+        <p class="copyright">© 2022 | Created and Designed By <a href="https://github.com/iamisha"> Isha Hitang</a>
         </p>
     </footer>
     <!-- js file -->
