--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="nav">
         <ul>
-            <li><a class="hover-menu" href="clock.html">Home</a></li>
+            <li><a class="hover-menu" href="index.html">Home</a></li>
             <li><a class="hover-menu" href="focus.html">Focus</a></li>
         </ul>
     </div>
@@ -21,11 +21,11 @@
     </div>
     <div id="clock" class="clockstyle"></div>
     <footer style="text-align: center; font-weight: bold;color: rgb(63, 49, 49); margin: 0px auto;">
-        <p class="copyright">© 2022 | Created and Designed By |<a href="https://github.com/iamisha"> Isha Hitang</a> |
+        <p class="copyright">© 2022 | Created and Designed By <a href="https://github.com/iamisha"> Isha Hitang</a>
         </p>
     </footer>
     <!-- js file -->
-    <script type="text/javascript" src="clock.js"></script>
+    <script type="text/javascript" src="external.js"></script>
 </body>
 
 </html>
