--- a/Focus.html
+++ b/Focus.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>focus</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     </link>
 </head>
 
