--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>focus_promo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     </link>
 </head>
 
@@ -13,7 +14,7 @@
     <div class="nav">
         <ul>
             <li><a class="hover-menu" href="index.html">Home</a></li>
-            <li><a class="hover-menu" href="focus.html">Focus</a></li>
+            <li><a class="hover-menu" href="Focus.html">Focus</a></li>
         </ul>
     </div>
     <div class="text">
